apps/staging/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nignx
  namespace: staging
spec:
  selector:
    matchLabels:
      app: nignx
  template:
    metadata:
      labels:
        app: nignx
    spec:
      containers:
      - name: nignx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: staging
spec:
  selector:
    app: nignx
  ports:
  - port: 80
    targetPort: 80
